# AwakeGuard

./: .gitattributes  .gitignore  Directory.Build.props  README.md  RELEASING.md
.github/workflows/: release.yml  xp-lol.yml
AwakeGuard/: App.xaml  App.xaml.cs  AwakeGuard.csproj  AwakeGuard.sln  MainWindow.xaml  MainWindow.xaml.cs  README.md
AwakeGuard-9x-roflmao/: .gitignore  CMakeLists.txt  README.md  app.manifest.in  build.ps1
AwakeGuard-9x-roflmao/cmake/: Version.cmake  mingw-i686-9x.cmake
AwakeGuard-9x-roflmao/redist/: README.md
AwakeGuard-9x-roflmao/scripts/: prepare-floppy.ps1
AwakeGuard-9x-roflmao/src/: app.cpp  app.h  cleanup.cpp  cleanup.h  dialogs.cpp  dialogs.h  main.cpp  os_compat.cpp  os_compat.h  path_util.cpp  path_util.h  paths.cpp  paths.h  resource.h  resource.rc  session.cpp  session.h  settings_store.cpp  settings_wnd.cpp  settings_wnd.h  startup.cpp  startup.h  tray.cpp  tray.h  ui.cpp  util.cpp  util.h  win32_common.h  win95_stubs.c
AwakeGuard-win32/: AwakeGuard.sln  AwakeGuard.vcxproj  CMakeLists.txt  README.md  app.manifest  build.bat
AwakeGuard-win32/msbuild/: AwakeGuard.Version.targets
AwakeGuard-win32/src/: app.cpp  app.h  cleanup.cpp  dialogs.cpp  dialogs.h  main.cpp  paths.cpp  paths.h  resource.h  resource.rc  session.cpp  settings_store.cpp  settings_wnd.cpp  startup.cpp  tray.cpp  ui.cpp  ui.h  util.cpp  win32_common.h
AwakeGuard-xp-lol/: CMakeLists.txt  README.md  app.manifest  app.manifest.in  build.ps1
AwakeGuard-xp-lol/cmake/: Version.cmake  awakeguard_version.h.in  icons.rc.in  mingw-i686-xp.cmake
AwakeGuard-xp-lol/src/: app.cpp  cleanup.cpp  cleanup.h  dialogs.cpp  main.cpp  path_util.cpp  path_util.h  paths.cpp  paths.h  resource.rc  session.cpp  session.h  settings_store.cpp  settings_store.h  settings_wnd.cpp  startup.cpp  tray.cpp  tray.h  ui.cpp  ui.h  util.cpp  util.h  version.h  win32_common.h
AwakeGuard/Converters/: InverseBooleanConverter.cs
AwakeGuard/Dialogs/: AboutDialog.cs  AboutWindow.xaml  AboutWindow.xaml.cs  ConfirmDialog.xaml  ConfirmDialog.xaml.cs  FluentMessageBox.cs
AwakeGuard/Models/: AppSettings.cs  DurationPreset.cs
AwakeGuard/Native/: ExecutionStateInterop.cs
AwakeGuard/Services/: AppPaths.cs  AppSettingsStore.cs  AwakeSessionManager.cs  SourceFolderCleanupService.cs  StartupArguments.cs  WindowsStartupService.cs
AwakeGuard/Tray/: TrayController.cs  TrayIconFactory.cs
AwakeGuard/ViewModels/: MainViewModel.cs
scripts/: generate-icons.py  install.ps1
